[Yanqing]fix the history questions bug that question and answer display too long

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,7 +31,7 @@
   text-align: center;
 }
 .customerWidth{
-  width: 100px;
+  width: 120px;
   overflow: scroll;
 }
 
